# horizon

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.bat  build.rs  conftest.py  package.json  requirements-dev.txt  requirements.txt  run.py  server.py
.cargo/: config.toml
.github/workflows/: release.yml
docs/: rust-migration.md
scripts/: bump_version.py  make_demo.sh  make_icon.py
src/: api.rs  db.rs  lib.rs  main.rs  paths.rs  static_files.rs  window.rs
static/: app.js  core.js  index.html  style.css
tests/: api.rs  test_open_tasks.py  test_search_date_filter.py  test_task_updates.py  test_waiting_list.py
tests/js/: core.test.js
