[package]
name = "horizon"
version = "0.2.0"
edition = "2024"

# The exe keeps the capitalized name users know from the Python-era builds.
[[bin]]
name = "Horizon"
path = "src/main.rs"

[dependencies]
axum = "0.8.9"
log = "0.4.33"
mime_guess = "2.0.5"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rust-embed = "8.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
simplelog = "0.12.2"
tao = "0.35.3"
time = { version = "0.3.53", features = ["formatting", "parsing", "macros", "local-offset"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net"] }
uuid = { version = "1.23.4", features = ["v4"] }
wry = "0.55.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Graphics_Dwm",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }

# Small single-file exe: strip symbols, fat LTO.
[profile.release]
strip = true
lto = true
codegen-units = 1

[build-dependencies]
winresource = "0.1.31"
